--- a/URY.BAPS.Client.Wpf/packages.config
+++ b/URY.BAPS.Client.Wpf/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CalcBinding" version="2.4.0" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="DynamicExpresso.Core" version="2.3.1" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="gong-wpf-dragdrop" version="1.1.0" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
-  <package id="System.Reactive" version="4.1.2" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
+  <package id="System.Reactive" version="4.1.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
