Various Track-related enhancements
Checking whether a track is a load-failed/loading/etc special track now happens in Common.

Renamed EntryTypeToIconConverter to TrackToIconConverter, and added unit tests for it.

--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -140,7 +140,7 @@
     <Compile Include="Services\ChannelFactoryService.cs" />
     <Compile Include="ViewModel\ChannelComponentViewModelBase.cs" />
     <Compile Include="ViewModel\ChannelViewModel.cs" />
-    <Compile Include="Converters\EntryTypeToIconConverter.cs" />
+    <Compile Include="Converters\TrackToIconConverter.cs" />
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
