--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -124,6 +124,9 @@
       <DependentUpon>TrackBar.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Header.cs" />
+    <Compile Include="Controls\TrackLegend.xaml.cs">
+      <DependentUpon>TrackLegend.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\TrackList.xaml.cs">
       <DependentUpon>TrackList.xaml</DependentUpon>
     </Compile>
@@ -173,6 +176,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\TrackLegend.xaml" />
     <Page Include="Controls\TrackList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
