Spin out DirectoryFactoryService
Mostly to match ChannelFactoryService.

--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -107,6 +107,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\DirectoryFactoryService.cs" />
     <Compile Include="Services\WallServiceBase.cs" />
     <Compile Include="Walls\AudioWall.xaml.cs">
       <DependentUpon>AudioWall.xaml</DependentUpon>
