--- a/URY.BAPS.Client.Wpf.Tests/packages.config
+++ b/URY.BAPS.Client.Wpf.Tests/packages.config
@@ -2,10 +2,14 @@
 <packages>
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
-  <package id="xunit" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.CodeCoverage" version="16.0.1" targetFramework="net472" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.0.1" targetFramework="net472" />
+  <package id="xunit" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.runner.visualstudio" version="2.4.1" targetFramework="net472" developmentDependency="true" />
 </packages>
