Move bapsnet code to new project
This'll make it possible to, eventually, use it in the server...?

--- a/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
+++ b/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
@@ -18,6 +18,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
+    <ProjectReference Include="..\URY.BAPS.Protocol.V2\URY.BAPS.Protocol.V2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="BapsNet\" />
   </ItemGroup>
 
 </Project>
