--- a/URY.BAPS.Client.Protocol.V2/URY.BAPS.Client.Protocol.V2.csproj
+++ b/URY.BAPS.Client.Protocol.V2/URY.BAPS.Client.Protocol.V2.csproj
@@ -2,6 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <NullableContextOptions>enable</NullableContextOptions>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
+      <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
+    </ItemGroup>
 
 </Project>
