--- a/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
+++ b/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
@@ -6,4 +6,14 @@
         <RootNamespace>URY.BAPS.Server.V3</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0-preview5.19227.9" />
+    </ItemGroup>
+
 </Project>
