--- a/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
+++ b/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
@@ -3,7 +3,6 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.0</TargetFramework>
-        <RootNamespace>URY.BAPS.Server.V3</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +13,11 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview5.19227.9" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.0.0-preview5.19227.9" />
       <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0-preview5.19227.9" />
+      <PackageReference Include="System.Reactive" Version="4.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
     </ItemGroup>
 
 </Project>
