--- a/URY.BAPS.Client.Common/URY.BAPS.Client.Common.csproj
+++ b/URY.BAPS.Client.Common/URY.BAPS.Client.Common.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
+    <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
   </ItemGroup>
 
 </Project>
