--- a/URY.BAPS.Common.Protocol.V2/URY.BAPS.Common.Protocol.V2.csproj
+++ b/URY.BAPS.Common.Protocol.V2/URY.BAPS.Common.Protocol.V2.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
