--- a/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
+++ b/URY.BAPS.Server.Reference/URY.BAPS.Server.Reference.csproj
@@ -3,9 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.0</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <NullableContextOptions>enable</NullableContextOptions>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="4.9.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0-preview5.19227.9" />
       <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.0.0-preview5.19227.9" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="3.0.0-preview5.19227.9" />
