More (mostly login) misc rearranging

--- a/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
+++ b/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
@@ -25,4 +25,7 @@
   <ItemGroup>
     <None Remove="BapsNet\**" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Auth\" />
+  </ItemGroup>
 </Project>
