WPF: factor out and play with channel lamps

--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -57,6 +57,7 @@
     <None Include="Resources\Main.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Controls\Channel.Resources.xaml" />
     <Resource Include="Resources\splashIcon.png" />
   </ItemGroup>
   <ItemGroup>
