Port LoginViewModel to ReactiveUI
There's more I want to do with the login dialog/view model, but it can wait.

--- a/URY.BAPS.Client.ViewModels/URY.BAPS.Client.ViewModel.csproj
+++ b/URY.BAPS.Client.ViewModels/URY.BAPS.Client.ViewModel.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
     <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
   </ItemGroup>
 
