(Broken) checkpoint before doing massive auth overhauls
Apologies for large, out of hand, broken commit.

--- a/URY.BAPS.Common.Protocol.V2.Tests/URY.BAPS.Common.Protocol.V2.Tests.csproj
+++ b/URY.BAPS.Common.Protocol.V2.Tests/URY.BAPS.Common.Protocol.V2.Tests.csproj
@@ -15,4 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Decode" />
+  </ItemGroup>
 </Project>
