Clean up back to workable state
Man I am bad with these commits being workably sized.  The problem here is that it's sooo easy to do massive batches of changes with an IDE, and I'm still exploring the right way to structure all of this.  =P

--- a/URY.BAPS.Server.Protocol.V2/URY.BAPS.Server.Protocol.V2.csproj
+++ b/URY.BAPS.Server.Protocol.V2/URY.BAPS.Server.Protocol.V2.csproj
@@ -2,14 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Common\URY.BAPS.Common.Infrastructure\URY.BAPS.Common.Infrastructure.csproj" />
       <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Io" />
     </ItemGroup>
 
 </Project>
