--- a/URY.BAPS.Client.Cli/URY.BAPS.Client.Cli.csproj
+++ b/URY.BAPS.Client.Cli/URY.BAPS.Client.Cli.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
-    <PackageReference Include="LagDaemon.ReadLine" Version="2.0.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" />
+    <PackageReference Include="Rubberduck.ReadLine" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
