--- a/URY.BAPS.Server.Reference/URY.BAPS.Server.csproj
+++ b/URY.BAPS.Server.Reference/URY.BAPS.Server.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="System.Reactive" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\URY.BAPS.Common.Infrastructure\URY.BAPS.Common.Infrastructure.csproj" />
     <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
     <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
     <ProjectReference Include="..\URY.BAPS.Server.Protocol.V2\URY.BAPS.Server.Protocol.V2.csproj" />
